samples/_failures_safe/1761669584_e7350a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ed03a7bc.c: In function ‘main’:
./samples/SAFE/__tmp_ed03a7bc.c:178:5: error: expected declaration or statement at end of input
  178 |     }
      |     ^
